// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadcrumbDesktop /> renders correctly default: default 1`] = `
<DocumentFragment>
  <nav
    aria-label="breadcrumb"
    class="chakra-breadcrumb css-1y2eexs"
    data-testid="breadcrumb-desktop"
  >
    <ol
      class="chakra-breadcrumb__list css-70qvj9"
    >
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="/"
        >
          Level 0
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="/level1"
        >
          Level 1
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="/level1/level2"
        >
          Level 2
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="/level1/level2/level3"
        >
          Level 3
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="/level1/level2/level3/level4"
        >
          Level 4
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="/level1/level2/level3/level4/level5"
        >
          Level 5
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="http://www.google.com"
        >
          Level 6
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="/level1/level2/level3/level4/level5/level6/level7"
        >
          Level 7
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <span
          aria-current="page"
          class="chakra-breadcrumb__link css-2y15zy"
        >
          Level 8
        </span>
      </li>
    </ol>
  </nav>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<BreadcrumbDesktop /> renders correctly with maxItems to show: showMaxItems 1`] = `
<DocumentFragment>
  <nav
    aria-label="breadcrumb"
    class="chakra-breadcrumb css-1y2eexs"
    data-testid="breadcrumb-desktop"
  >
    <ol
      class="chakra-breadcrumb__list css-70qvj9"
    >
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="/"
        >
          Level 0
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="/level1"
        >
          Level 1
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <button
          aria-controls="menu-list-:r1:"
          aria-expanded="false"
          aria-haspopup="menu"
          class="chakra-menu__menu-button css-12005wt"
          data-testid="breadcrumb-menu-button"
          id="menu-button-:r1:"
        >
          <span
            class="css-xl71ch"
          >
            <svg
              class="chakra-icon css-1qzovvq"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M140,128a12,12,0,1,1-12-12A12,12,0,0,1,140,128Zm56-12a12,12,0,1,0,12,12A12,12,0,0,0,196,116ZM60,116a12,12,0,1,0,12,12A12,12,0,0,0,60,116Z"
              />
            </svg>
          </span>
        </button>
        <div
          class="css-r6z5ec"
          style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
        >
          <div
            aria-orientation="vertical"
            class="chakra-menu__menu-list css-12srbko"
            data-testid="breadcrumb-dropdown"
            id="menu-list-:r1:"
            role="menu"
            style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
            tabindex="-1"
          >
            <div
              class="chakra-stack css-6ekxde"
            >
              <a
                class="chakra-link chakra-menu__menuitem css-1ow1hrd"
                data-index="0"
                data-testid="dropdown-item"
                href="/level1/level2"
                id="menu-list-:r1:-menuitem-:r2:"
                role="menuitem"
                tabindex="-1"
              >
                <p
                  class="css-1a1j0go"
                >
                  Level 2
                </p>
              </a>
              <a
                class="chakra-link chakra-menu__menuitem css-1ow1hrd"
                data-index="1"
                data-testid="dropdown-item"
                href="/level1/level2/level3"
                id="menu-list-:r1:-menuitem-:r3:"
                role="menuitem"
                tabindex="-1"
              >
                <p
                  class="css-1a1j0go"
                >
                  Level 3
                </p>
              </a>
              <a
                class="chakra-link chakra-menu__menuitem css-1ow1hrd"
                data-index="2"
                data-testid="dropdown-item"
                href="/level1/level2/level3/level4"
                id="menu-list-:r1:-menuitem-:r4:"
                role="menuitem"
                tabindex="-1"
              >
                <p
                  class="css-1a1j0go"
                >
                  Level 4
                </p>
              </a>
              <a
                class="chakra-link chakra-menu__menuitem css-1ow1hrd"
                data-index="3"
                data-testid="dropdown-item"
                href="/level1/level2/level3/level4/level5"
                id="menu-list-:r1:-menuitem-:r5:"
                role="menuitem"
                tabindex="-1"
              >
                <p
                  class="css-1a1j0go"
                >
                  Level 5
                </p>
              </a>
              <a
                class="chakra-link chakra-menu__menuitem css-1ow1hrd"
                data-index="4"
                data-testid="dropdown-item"
                href="http://www.google.com"
                id="menu-list-:r1:-menuitem-:r6:"
                role="menuitem"
                tabindex="-1"
              >
                <p
                  class="css-1a1j0go"
                >
                  Level 6
                </p>
              </a>
            </div>
          </div>
        </div>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <a
          class="chakra-breadcrumb__link css-2y15zy"
          href="/level1/level2/level3/level4/level5/level6/level7"
        >
          Level 7
        </a>
        <span
          class="css-ouj2o6"
          role="presentation"
        >
          <svg
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
            />
          </svg>
        </span>
      </li>
      <li
        class="chakra-breadcrumb__list-item css-brt312"
      >
        <span
          aria-current="page"
          class="chakra-breadcrumb__link css-2y15zy"
        >
          Level 8
        </span>
      </li>
    </ol>
  </nav>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
